# medley

./: Dockerfile  PROJECT_STRUCTURE.md  README.md  docker-compose.yml  general_medical_pipeline.py  medley.db  medley_models_config.json  model_list_2025_updated.py  model_metadata_2025.py  pyproject.toml  pytest.ini  quick-build.sh  requirements.txt  requirements_web.txt  requirements_web_minimal.txt  run-docker.sh  run_all_cases.py  test_free_orch.py  test_progress.py  web_app.py  web_orchestrator.py
config/: pipeline_config.yaml
deployment/: Dockerfile  Dockerfile.fast  README-DockerHub.md  build-docker.sh  docker-compose.production.yml.bak  docker-compose.yml
docs/: API.md  AUTHORS.md  DEPLOYMENT_GUIDE.md  DEVELOPER.md  DOCKER_WORKFLOWS.md  ENSEMBLE_FEATURES.md  ETHICAL_FRAMEWORK_AND_PATIENT_INTERACTION.md  HOW_TO_ADD_NEW_CASES.md  IMPLEMENTATION_STATUS.md  MEDLEY_ALL_MODELS_LIST.md  ORCHESTRATOR_ARCHITECTURE.md  PIPELINE_GENERALITY_ANALYSIS.md  PROMPT_TEMPLATES.md  README.md  RELEASE_NOTES.md  USER_GUIDE.md
examples/: README.md  add_missing_models_case13.py  add_new_case.py  advanced_usage.py  basic_usage.py  complete_case_13.py  finalize_case_13.py  generate_case_13.py  generate_case_13_quick.py  generate_final_report.py  query_missing_models_case13.py  regenerate_case13_with_34models.py  regenerate_case_13_fixed.py  run_remaining_cases.sh
reports/: Case_12_ensemble_data_20250810_090457.json  Case_12_ensemble_data_20250810_190805.json  Case_12_ensemble_data_20250810_195424.json  Case_13_ensemble_data_20250811_202347.json  Case_13_ensemble_data_20250811_223007.json  Case_13_ensemble_data_20250811_225613.json  Case_13_ensemble_data_20250811_232041.json  Case_13_ensemble_data_20250811_233501.json  Case_13_ensemble_data_20250812_003637.json  Case_13_ensemble_data_20250812_064129.json  Case_1_ALL_DIAGNOSES_20250810_221854.json  Case_1_COMPLETE_ALL_DIAGNOSES_20250810_221707.json  Case_1_COMPLETE_ALL_DIAGNOSES_20250810_221848.json  Case_1_COMPLETE_ORCHESTRATED_20250810_220748.json  Case_1_ENHANCED_MATRIX_20250810_222840.json  Case_1_ORCHESTRATED_ALL_DIAGNOSES_20250810_221707.json  Case_1_ORCHESTRATED_ALL_DIAGNOSES_20250810_221848.json  (+113 more)
(+1009 files in other folders)
